# SDA

TAD Arbore Binar/: AB.cpp  AB.h  CMakeLists.txt  IteratorAB.cpp  IteratorAB.h  TestExtins.cpp  main.cpp
TAD DO/: CMakeLists.txt  DO.cpp  DO.h  Iterator.cpp  Iterator.h  TestExtins.cpp  TestScurt.cpp
TAD Matrice/: CMakeLists.txt  Matrice.cpp  Matrice.h  TestExtins.cpp
TAD MultiDictionar Ordonat/: CMakeLists.txt  IteratorMDO.cpp  IteratorMDO.h  MDO.cpp  MDO.h  TestExtins.cpp
TAD Multime/: CMakeLists.txt  IteratorMultime.cpp  IteratorMultime.h  Multime.cpp  Multime.h  TestExtins.cpp  TestExtins.h  TestScurt.cpp  TestScurt.h  main.cpp
